<resources>
    <string name="app_name">AndroidERestaurant</string>
    <string name="android_logo">android_logo</string>
    <string name="entr_es">Entrées</string>
    <string name="plats">Plats</string>
    <string name="desserts">Desserts</string>
    <string name="bienvenue_chez">Bienvenue chez</string>
    <string name="droidrestaurant">DroidRestaurant</string>
    <string name="retour">Retour</string>
    <string name="image_plat">Image_plat</string>
    <string name="price">Prix</string>
    <string name="ingr_dients">Ingrédients</string>
    <string name="euros">€</string>

    <string-array name="entries_list">
        <item>Entrée 1</item>
        <item>Entrée 2</item>
        <item>Entrée 3</item>
        <item>Entrée 4</item>
    </string-array>

    <string-array name="main_courses_list">
        <item>Plat 1</item>
        <item>Plat 2</item>
        <item>Plat 3</item>
        <item>Plat 4</item>
        <item>Plat 5</item>
    </string-array>

    <string-array name="desserts_list">
        <item>Dessert 1</item>
        <item>Dessert 2</item>
    </string-array>
</resources>